--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
   <div id="menu">
        
     <ul style="margin-top: 10px;">
-          <li><a href="index1.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
         <div class="dropdown">
           <li><a href="#">Student</a></li>
         <div class="dropdown-content">
