--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>KAMLA NEHRU INSTITUTE OF TECHNOLOGY (KNIT) SULTANPUR</title>
-  <link rel="shortcut icon" href="/home/harish/Desktop/project/image/favicon.ico" />
+  <link rel="shortcut icon" href="/image/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="/home/harish/Desktop/project/css/bootstrap.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style type="text/css">
