--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>KAMLA NEHRU INSTITUTE OF TECHNOLOGY (KNIT) SULTANPUR</title>
-  <link rel="shortcut icon" href="/image/favicon.ico" />
-  <link rel="stylesheet" type="text/css" href="/home/harish/Desktop/project/css/bootstrap.css">
+  <link rel="shortcut icon" href="image/favicon.ico" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style type="text/css">
     #border{
@@ -218,7 +218,7 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
   </div>
   <div id="header">
     <br>
-  <g><img src="/home/harish/Desktop/project/image/KNITlogo.png" height="120px" width="120px"/></g>
+  <g><img src="/image/KNITlogo.png" height="120px" width="120px"/></g>
   </div>
   <div id="menu">
        
@@ -254,14 +254,14 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
           <li><a   href="#">Admissions</a></li>
           <li><a   href="#">Campus Life</a></li>
           <li><a   href="#">Support Us</a></li>
-           <li><a   href="/home/harish/Desktop/project/StudentRegistration.html" target="blank">Ragistration</a></li>
-          <li><a   href="/home/harish/Desktop/project/stusentlogin.html" target="blank">Login</a></li>
+           <li><a   href="/StudentRegistration.html" target="blank">Ragistration</a></li>
+          <li><a   href="/stusentlogin.html" target="blank">Login</a></li>
           <t style="margin-left: 20px;">Search:&nbsp</t>
          <input type="text" placeholder="Search..." >
      </ul>
       </div>
       <div id="mark"><span style="font-size:15px; color:blue;">
-<marquee scrollamount="7"><b><img src="/home/harish/Desktop/project/image/rose.png" height="20px" width="20pxs"> <i>WELCOME TO KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</i><img src="/home/harish/Desktop/project/image/rose.png" height="20px" width="20pxs"></b></marquee></span></div>
+<marquee scrollamount="7"><b><img src="/image/rose.png" height="20px" width="20pxs"> <i>WELCOME TO KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</i><img src="/home/harish/Desktop/project/image/rose.png" height="20px" width="20pxs"></b></marquee></span></div>
        <div id="middle">
           <div class="m" style="float: left;">
             <div id="history">
