--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
   </div>
   <div id="header">
     <br>
-  <g><img src="/image/KNITlogo.png" height="120px" width="120px"/></g>
+  <g><img src="image/KNITlogo.png" height="120px" width="120px"/></g>
   </div>
   <div id="menu">
        
@@ -261,7 +261,7 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
      </ul>
       </div>
       <div id="mark"><span style="font-size:15px; color:blue;">
-<marquee scrollamount="7"><b><img src="/image/rose.png" height="20px" width="20pxs"> <i>WELCOME TO KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</i><img src="/home/harish/Desktop/project/image/rose.png" height="20px" width="20pxs"></b></marquee></span></div>
+<marquee scrollamount="7"><b><img src="image/rose.png" height="20px" width="20pxs"> <i>WELCOME TO KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</i><img src="/home/harish/Desktop/project/image/rose.png" height="20px" width="20pxs"></b></marquee></span></div>
        <div id="middle">
           <div class="m" style="float: left;">
             <div id="history">
@@ -305,24 +305,24 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
              </ul>
            </div><hr>
           <p style="margin-top:5px"><span style="font-size:15px; color: green">
-            <b style="margin-left: 10px;">Imaportant Links <img src="/home/harish/Desktop/project/image/imp_links.png" style="float: right;">
+            <b style="margin-left: 10px;">Imaportant Links <img src="image/imp_links.png" style="float: right;">
             </b>
-          </p></span><hr><img src="/home/harish/Desktop/project/image/arrow1.png" height="10px" width="10px;">&nbsp &nbsp<a href="https://upsee.nic.in/publicinfo/public/home.aspx" target="blank">UPSEE</a>
+          </p></span><hr><img src="image/arrow1.png" height="10px" width="10px;">&nbsp &nbsp<a href="https://upsee.nic.in/publicinfo/public/home.aspx" target="blank">UPSEE</a>
           <br><br>
-          <img src="/home/harish/Desktop/project/image/arrow1.png" height="10px" width="10px;">&nbsp &nbsp<a href="https://aktu.ac.in/" target="blank">Dr. A P J Abdul Kalam Technical <l style="margin-left: 20px;">University</l></a>
+          <img src="image/arrow1.png" height="10px" width="10px;">&nbsp &nbsp<a href="https://aktu.ac.in/" target="blank">Dr. A P J Abdul Kalam Technical <l style="margin-left: 20px;">University</l></a>
 
         </div>
           <div class="m" style="float: right;">
             <center>
-  <div id="news"><br><img src="/home/harish/Desktop/project/image/news_event_g.png"><p style="margin-top:0px">
+  <div id="news"><br><img src="image/news_event_g.png"><p style="margin-top:0px">
               <span style="font-size:15px; color: white"><b> News & Events</b></span></p><hr>
               <marquee direction="up" scrollamount="5" height="100px;" hspace="5px;" onmouseover="stop();" onmouseout="start();"><p style="color: white; margin-left:10px;">The candidates (who have paid the fees) can download their Admit Cards from  website www.knit.ac.in  w.e.f. 06.02.2020 (Friday). The candidates are advised to download their Admit Card of semester exam  using their roll and Password. In case, a candidate has misplaced or forgotten the Password, he/she may use the Date of Birth option given in the website.</p></marquee>
             </div>
-            <div id="currentevent"><br><img src="/home/harish/Desktop/project/image/cur_event_g.png"><p style="margin-top:0px"><span style="font-size:15px; color: green"><b>Current Events</b></span></p><hr>
+            <div id="currentevent"><br><img src="image/cur_event_g.png"><p style="margin-top:0px"><span style="font-size:15px; color: green"><b>Current Events</b></span></p><hr>
               <ul style="list-style-type: none; margin-left: 0px;">
    <marquee direction="up" height="280px;" scrolldelay="20">           
-<li><a href="pdf/STC_Feb_P2020.pdf" target="_blank"><img src="/home/harish/Desktop/project/image/arrow_g.png"> STC on "Essentials of Teaching Learning Process" 2020</a><img src="/home/harish/Desktop/project/image/newicon.gif"></li>  
-<li><a href="pdf/Notice_IIT_27Jan2020.pdf" target="_blank"><img src="/home/harish/Desktop/project/image/arrow_g.png"> TEQIP-III Programmes at IIT Delhi</a><img src="/home/harish/Desktop/project/image/newicon.gif"></li>             
+<li><a href="pdf/STC_Feb_P2020.pdf" target="_blank"><img src="image/arrow_g.png"> STC on "Essentials of Teaching Learning Process" 2020</a><img src="/home/harish/Desktop/project/image/newicon.gif"></li>  
+<li><a href="pdf/Notice_IIT_27Jan2020.pdf" target="_blank"><img src="image/arrow_g.png"> TEQIP-III Programmes at IIT Delhi</a><img src="/home/harish/Desktop/project/image/newicon.gif"></li>             
 <li><a href="pdf/ORTA_27Jan2020.pdf" target="_blank"><img src="/home/harish/Desktop/project/image/arrow_g.png"> STC on "Operation Research : Techniques and Applications (ORTA-2020)"</a><img src="/home/harish/Desktop/project/image/newicon.gif"></li>
 <li><a href="pdf/NPTEL_220120.pdf" target="_blank"><img src="/home/harish/Desktop/project/image/arrow_g.png"> Notice for NPTEL Course for VIII Sem. B. Tech (All Branches)</a><img src="/home/harish/Desktop/project/image/newicon.gif"> </li>
 <!--<li><a href="pdf/Notice-MOOCS_210120.pdf" target="_blank">Notice for NPTEL Course for VIII Sem. B. Tech (All Branches)</a><img src="/home/harish/Desktop/project/image/newicon.gif">  </li>-->
@@ -362,8 +362,8 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
             <p><b style="font-family: verdana;">KAMLA NEHRU INSTITUTE OF TECHNOLOGY (KNIT) SULTANPUR</b>, was established by Govt. of Uttar Pradesh as a registered society in 1979 with a mission to advanced knowledge and educate students in Engineering & Technology and other areas of scholarship that will best serve the region and the nation. Initially institute was named as Kamla Nehru Institute of Science & Technology (Technological faculty) which was changed to KAMLA NEHRU INSTITUTE OF TECHNOLOGY, SULTANPUR in 1983. </p> 
             <br><br>
             <center>
-            <a href="https://upsee.nic.in/publicinfo/public/home.aspx" target="blank"><new>Admission Notice UPSEE-2020<img src="/home/harish/Desktop/project/image/newicon.gif"></new></></a><br><br><br>
-            <a href="https://govexams.com/knit/Searchresult.aspx" target="blank"><new>View Result/Score Card<img src="/home/harish/Desktop/project/image/newicon.gif"></new></a><br><br><br>
+            <a href="https://upsee.nic.in/publicinfo/public/home.aspx" target="blank"><new>Admission Notice UPSEE-2020<img src="image/newicon.gif"></new></></a><br><br><br>
+            <a href="https://govexams.com/knit/Searchresult.aspx" target="blank"><new>View Result/Score Card<img src="image/newicon.gif"></new></a><br><br><br>
             <a href="https://www.tvaran2k20.co.in" target="blank"><new>Tvaran 2020<img src="/home/harish/Desktop/project/image/newicon.gif"></new></></a>
           </center>
         </div>
