--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <html>
 <head>
   <title>KAMLA NEHRU INSTITUTE OF TECHNOLOGY (KNIT) SULTANPUR</title>
-  <link rel="shortcut icon" href="/home/harish/Desktop/project/image/favicon.ico" />
-  <link rel="stylesheet" type="text/css" href="/home/harish/Desktop/project/css/bootstrap.css">
+  <link rel="shortcut icon" href="image/favicon.ico" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <style type="text/css">
     #border{
       height: 1355px;
@@ -38,7 +38,7 @@
   width: 1175px;
   background-color: lightgrey;
   //border: 5px green;
-   background-image:url('/home/harish/Desktop/project/image/7.jpg');
+   background-image:url('image/7.jpg');
     background-repeat:no-reapeat;
     background-size:cover;
     //opacity: 0.1;
@@ -135,7 +135,7 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
   </div>
   <div id="header">
     <br>
-  <g><img src="/home/harish/Desktop/project/image/KNITlogo.png" height="120px" width="120px" style="margin-left: 50px;" /></g>
+  <g><img src="image/KNITlogo.png" height="120px" width="120px" style="margin-left: 50px;" /></g>
   </div>
   <div id="menu">
        
@@ -147,14 +147,14 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
           <li><a   href="#">Admissions</a></li>
           <li><a   href="#">Campus Life</a></li>
           <li><a   href="#">Support Us</a></li>
-          <li><a   href="/home/harish/Desktop/project/studentRegistration.html" target="blank">Registration</a></li>
-          <li><a   href="/home/harish/Desktop/project/stusentlogin.html">Login</a></li>
+          <li><a   href="studentRegistration.html" target="blank">Registration</a></li>
+          <li><a   href="stusentlogin.html">Login</a></li>
           <t style="margin-left: 10px;">Search:&nbsp</t>
          <input type="text" placeholder="Search..." >
      </ul>
       </div>
       <div id="mark" style="background-color: green;"><span style="font-size:15px; color:blue;" >
-<marquee scrollamount="7"><b><img src="/home/harish/Desktop/project/image/rose.png" height="20px" width="20pxs"> <i>WELCOME TO KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</i><img src="/home/harish/Desktop/project/image/rose.png" height="20px" width="20pxs"></b></marquee></span></div>
+<marquee scrollamount="7"><b><img src="image/rose.png" height="20px" width="20pxs"> <i>WELCOME TO KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</i><img src="image/rose.png" height="20px" width="20pxs"></b></marquee></span></div>
        <center> <div id="middle"><div id="mid" style="margin-top: 20px;">      
       <table style="margin-left: 20px; font-weight: bold;"><h3>Contact Detail</h3><b>
       <tr>
@@ -263,7 +263,95 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
     <td><a href="mailto:payasirp@knit.ac.in"></a>payasirp@knit.ac.in</td>
   </tr>
   <tr>
-    <td>Head of    Mechanical Engg. Dept.</td>
+    <td>Head of    Mechanical Engg. Dept.</td>​
+2
+<!DOCTYPE html>
+3
+<html>
+4
+<head>
+5
+  <title>KAMLA NEHRU INSTITUTE OF TECHNOLOGY (KNIT) SULTANPUR</title>
+6
+  <link rel="shortcut icon" href="/home/harish/Desktop/project/image/favicon.ico" />
+7
+  <link rel="stylesheet" type="text/css" href="/home/harish/Desktop/project/css/bootstrap.css">
+8
+  <style type="text/css">
+9
+    #border{
+10
+      height: 1355px;
+11
+      width: 1175px;
+12
+      //background-color: #cccccc;
+13
+      margin-left: 5px;
+14
+      background-image: url('1.jpg');
+15
+    }
+16
+    #h1{
+17
+      height: 5px;
+18
+      width: 1175px;
+19
+      background-color: #993333;
+20
+    }
+21
+    #header {
+22
+  height: 150px;
+23
+  width: 1175px;
+24
+  background-color: #cccccc;
+25
+  background-image: linear-gradient(gainsboro, #f2d9d9,lightgrey);
+26
+  top-border:5px solid #993333;
+27
+}
+28
+​
+29
+#header {
+30
+  height: 150px;
+31
+  width: 1175px;
+32
+  background-color: #cccccc;
+33
+  background-image: linear-gradient(gainsboro, #f2d9d9,lightgrey);
+34
+  top-border:5px solid #993333;
+35
+}
+36
+#middle{
+37
+  height: 1000px;
+38
+  width: 1175px;
+39
+  background-color: lightgrey;
+40
+  //border: 5px green;
+41
+   background-image:url('/home/harish/Desktop/project/image/7.jpg');
+42
+    background-repeat:no-reapeat;
+43
+    background-size:cover;
+44
+    //opacity: 0.1;
+45
+    //transform: rotate3d(10deg);
     <td>Prof.J.P.Pandey</td>
     <td>9415041790</td>
     <td><a href="mailto:director@knit.ac.in">director@knit.ac.in</a></td>
