--- a/stusentlogin.html
+++ b/stusentlogin.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>KAMLA NEHRU INSTITUTE OF TECHNOLOGY (KNIT) SULTANPUR</title>
-	<link rel="shortcut icon" href="/home/harish/Desktop/project/image/favicon.ico" />
-	<link rel="shortcut icon" href="/home/harish/Desktop/project/image/favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="/home/harish/Desktop/project/css/bootstrap.css">
+	<link rel="shortcut icon" href="image/favicon.ico" />
+	<link rel="shortcut icon" href="image/favicon.ico" />
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<style type="text/css">
 		#border{
 			height: 150px;
@@ -54,7 +54,7 @@ button {
 		<div id="b1">
 	<div id="border">	
 		<br><br><br>		
-<img src="/home/harish/Desktop/project/image/user.png" height="100px" width="100px" style="margin-left: -50px;"></div>
+<img src="image/user.png" height="100px" width="100px" style="margin-left: -50px;"></div>
 <h2 style="margin-top: 35px;">Student Login &nbsp</h2>
 <h4>Sign in to continue</h4>
 <div id="h1"><br><br>
