--- a/StudentRegistration.html
+++ b/StudentRegistration.html
@@ -3,8 +3,8 @@
 <html>
 <head>
   <title>KAMLA NEHRU INSTITUTE OF TECHNOLOGY (KNIT) SULTANPUR</title>
-  <link rel="shortcut icon" href="/home/harish/Desktop/project/image/favicon.ico" />
-  <link rel="stylesheet" type="text/css" href="/home/harish/Desktop/project/css/bootstrap.css">
+  <link rel="shortcut icon" href="image/favicon.ico" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <style type="text/css">
     #border{
       height: 1320px;
@@ -30,7 +30,7 @@
   width: 1272px;
   background-color: lightgrey;
   //border: 5px green;
-   // background-image:url('/home/harish/Desktop/project/image/PHOTO.jpeg');
+   // background-image:url('image/PHOTO.jpeg');
    // background-repeat:no-reapeat;
     //background-size:cover;
     //transform: rotate3d(10deg);
@@ -119,7 +119,7 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
   </div>
   <div id="header">
     <br>
-  <g><img src="/home/harish/Desktop/project/image/KNITlogo.png" height="120px" width="120px" style="margin-left: 50px;" /></g>
+  <g><img src="image/KNITlogo.png" height="120px" width="120px" style="margin-left: 50px;" /></g>
   </div>
   <div id="menu">
        
@@ -355,7 +355,7 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
       <br><br>
       <input type="text" name="al">
       <br>
-            <a><b>3xA2pZ </b>&nbsp<img src="/home/harish/Downloads/Refresh.png" style="height:20px;width:20px;border-width:0px;" /></a>
+            <a><b>3xA2pZ </b>&nbsp<img src="image/ref.jpg" style="height:20px;width:20px;border-width:0px;" /></a>
      </td>
 </tr>
     <tr>
@@ -366,7 +366,7 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
 
 <tr>
 <td style="width: 50%;text-align: right;"><input type="checkbox" name="I Agree"></td>
-     <td><b> &nbsp &nbsp I Agree <img src="https://ntaneet.nic.in/ntaneet/Images/right.gif"></b></td>
+     <td><b> &nbsp &nbsp I Agree <img src="image/check-circle.gif" style="height:20px;width:20px;border-width:0px;"></b></td>
  </tr>
     <tr>
     <td>
