--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
           <a href="#">Train Time Table</a>
         </div></div>
         <div class="dropdown">
-          <li><a href="#">Career Development</a></li>
+          <li><a href="http://www.knit.ac.in/site/writereaddata/siteContent/202108251200231893TPO%20MEMBER-converted.pdf">Career Development</a></li>
         <div class="dropdown-content">
           <a href="#">Career Development Cell</a>
           <a href="#">Students Placement Module</a>
