--- a/director.html
+++ b/director.html
@@ -3,8 +3,8 @@
 <html>
 <head>
   <title>KAMLA NEHRU INSTITUTE OF TECHNOLOGY (KNIT) SULTANPUR</title>
-  <link rel="shortcut icon" href="/home/harish/Desktop/project/image/favicon.ico" />
-  <link rel="stylesheet" type="text/css" href="/home/harish/Desktop/project/css/bootstrap.css">
+  <link rel="shortcut icon" href="image/favicon.ico" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <style type="text/css">
     #border{
       height: 500px;
@@ -36,7 +36,7 @@
   width: 1275px;
   background-color: lightgrey;
   //border: 5px green;
-   // background-image:url('/home/harish/Desktop/project/image/PHOTO.jpeg');
+   // background-image:url('image/PHOTO.jpeg');
    // background-repeat:no-reapeat;
     //background-size:cover;
     //transform: rotate3d(10deg);
@@ -122,27 +122,27 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
   </div>
   <div id="header">
     <br>
-  <g><img src="/home/harish/Desktop/project/image/KNITlogo.png" height="120px" width="120px" style="margin-left: 50px;" /></g>
+  <g><img src="image/KNITlogo.png" height="120px" width="120px" style="margin-left: 50px;" /></g>
   </div>
   <div id="menu">
        
     <ul style="margin-top: 10px;">
-          <li><a href="index1.html"s>Home</a></li>
+          <li><a href="index.html"s>Home</a></li>
           <li><a   href="#">Student</a></li>
           <li><a   href="#">Career Development</a></li>
           <li><a   href="#">Circular</a></li>
           <li><a   href="#">Admissions</a></li>
           <li><a   href="#">Campus Life</a></li>
           <li><a   href="#">Support Us</a></li>
-          <li><a   href="/home/harish/Desktop/project/studentRegistration.html" target="blank">Registration</a></li>
-          <li><a   href="/home/harish/Desktop/project/stusentlogin.html">Login</a></li>
+          <li><a   href="studentRegistration.html" target="blank">Registration</a></li>
+          <li><a   href="stusentlogin.html">Login</a></li>
           <t style="margin-left: 70px;">Search:&nbsp</t>
          <input type="text" placeholder="Search..." >
      </ul>
       </div>
       <div id="mark" style="background-color: green;"><span style="font-size:15px; color:blue;" >
-<marquee scrollamount="7"><b><img src="/home/harish/Desktop/project/image/rose.png" height="20px" width="20pxs"> <i>WELCOME TO KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</i><img src="/home/harish/Desktop/project/image/rose.png" height="20px" width="20pxs"></b></marquee></span></div>
-       <center><div id="middle"><div id="mid"><img src="/home/harish/Desktop/project/image/director.png" height="160px;" width="180px;" style="margin-top: 35px; border:5px white; border-radius:80px 80px 80px 80px;" ><br>Prof. J.P.Pandey<br><b style="color: red">Director's Profile</b><br><br><hr size:10px;>
+<marquee scrollamount="7"><b><img src="image/rose.png" height="20px" width="20pxs"> <i>WELCOME TO KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</i><img src="image/rose.png" height="20px" width="20pxs"></b></marquee></span></div>
+       <center><div id="middle"><div id="mid"><img src="image/director.png" height="160px;" width="180px;" style="margin-top: 35px; border:5px white; border-radius:80px 80px 80px 80px;" ><br>Prof. J.P.Pandey<br><b style="color: red">Director's Profile</b><br><br><hr size:10px;>
         <h3><b>Director's Desk</b></h3>
 <p>Kamla Nehru Institute of Technology, Sultanpur has marked its presence as one of the leading technical institutes for providing congenial environment for the holistic growth of the students for the last four decades by and large. Strength and standing of the institute is witnessed by the professionally competent alumni proving their worth in academia and industry all over the country and overseas. In order to contribute to the socio-economic growth of the region in and around Sultanpur district, the institute renders testing and consultancy services to neighbouring industries, and of course to government & other agencies.
 
