--- a/index.html
+++ b/index.html
@@ -8,48 +8,42 @@
   <style type="text/css">
     #border{
       height: 1355px;
-      width: 1185px;
-      //background-color: #cccccc;
+      width: 1274px;
       margin-left: 5px;
       background-image: url('1.jpg');
     }
     #h1{
       height: 5px;
-      width: 1185px;
+      width: 1274px;
       background-color: #993333;
     }
     #header {
   height: 150px;
-  width: 1185px;
+  width: 1274px;
   background-color: #cccccc;
   background-image: linear-gradient(gainsboro, #f2d9d9,lightgrey);
-  top-border:5px solid #993333;
 }
 #mark{
   height: 35px;
-  width: 1185px;
+  width: 1274px;
   font-size:12px;
   background-color: white;
 }
 #middle{
   height: 800px;
-  width: 1185px;
+  width: 1274px;
   background-color: white;
 
 }
 .mid{
   height: 790px;
-  width: 590px;
   border: 5px solid black;
- // margin-left: 310px;
 }
 .m{
   height: 795px;
   width: 268px;
   background-color: lightgrey;
-  //border: 5px solid white;
-  margin-top: -5px;
-  //margin-left: 0px;
+ 
 }
 #news
 {
@@ -57,31 +51,26 @@
   width: 268px;
   background-color: deepskyblue;
   border: 5px white;
- // margin-left: 0px; 
 
 }
 #currentevent{
       height: 470px;
       width: 268px;
       background-color: lightgrey;
-      //margin-top: 10px;
-      //border: 15px white;
+      border: 15px white;
     }
 #history{
   height: 600px;
   width: 268px;
-  //background-color: red;
+  background-color: lightgrey;
   margin-top: -5px;
-  //border: 5px solid white;
- // margin-left: -5px;
 }
 new{
   background-color: blue;
   color: white;
   padding: 10px 85px;
- // margin-top: 10px;
-  margin-bottom: 0px: 
-  //border: none;
+  margin-top: 10px;
+  border: none;
   width: 600px;
   height: 70px;
   border-radius: 30px 30px 30px 30px;
@@ -90,7 +79,6 @@ n1{
   background-color: green;
   color: white;
   padding: 10px 85px;
-  margin-bottom: 0px: 
   border: none;
 }
 #h3{
@@ -105,10 +93,9 @@ g{
  }
  #menu{
   height: 45px;
-      width: 1185px;
+      width: 1274px;
       background-color: #993333;
       margin-top: 5px;
-      //border-radius:20px 20px 0px 0px;
             border:1px solid white;
             font-weight: bold;
 }
@@ -118,9 +105,7 @@ list-style-type:none;
 }
 #menu ul li{
 display:inline;
-padding:10px;
-//border:1px solid;
-//margin: 10PX;
+margin: 10PX;
 }
 #menu ul li a{
 color:white;
@@ -138,14 +123,13 @@ display: none;
 
 #footer{
        height: 300px;
-       width: 1185px;
+       width: 1274px;
        border:2px solid white;
        background-color: lightgrey;
-       margin-left: 0px;
 }
 .f1{
      height:270px;
-       width:268.25px;
+       width:300.5px;
        border:1px solid;
        margin-left:15px;
        margin-top:15px;
@@ -153,19 +137,16 @@ display: none;
 }
 #flast{
        height: 35px;
-       width: 1185px;
+       width: 1274px;
        background-color: mediumvioletred;
-      // border: 5px white;
-       //margin: 5px white;
-       //margin-right: 5px;
+       margin-right: 5px;
       color: white;
-      //margin-left: 5px;
 }
 p{
-  //font-weight: bold;
   font-family: verdana;
   font-size: 15px;
-  border: 5px white;
+  
+  margin-left: 16px;
 }
 .dropbtn {
   background-color: #4CAF50;
@@ -242,7 +223,7 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
           <a href="#">Train Time Table</a>
         </div></div>
         <div class="dropdown">
-          <li><a href="http://www.knit.ac.in/site/writereaddata/siteContent/202108251200231893TPO%20MEMBER-converted.pdf">Career Development</a></li>
+          <li><a href="#">Career Development</a></li>
         <div class="dropdown-content">
           <a href="#">Career Development Cell</a>
           <a href="#">Students Placement Module</a>
@@ -256,7 +237,7 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
           <li><a   href="#">Support Us</a></li>
            <li><a   href="StudentRegistration.html" target="blank">Ragistration</a></li>
           <li><a   href="stusentlogin.html" target="blank">Login</a></li>
-          <t style="margin-left: 20px;">Search:&nbsp</t>
+          <t style="margin-left: 70px;">Search:&nbsp</t>
          <input type="text" placeholder="Search..." >
      </ul>
       </div>
@@ -307,9 +288,9 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
           <p style="margin-top:5px"><span style="font-size:15px; color: green">
             <b style="margin-left: 10px;">Imaportant Links <img src="image/imp_links.png" style="float: right;">
             </b>
-          </p></span><hr><img src="image/arrow1.png" height="10px" width="10px;">&nbsp &nbsp<a href="https://upsee.nic.in/publicinfo/public/home.aspx" target="blank">UPSEE</a>
+          </p></span><hr><img src="image/arrow1.png" height="10px" width="10px;">&nbsp &nbsp<a href="https:upsee.nic.in/publicinfo/public/home.aspx" target="blank">UPSEE</a>
           <br><br>
-          <img src="image/arrow1.png" height="10px" width="10px;">&nbsp &nbsp<a href="https://aktu.ac.in/" target="blank">Dr. A P J Abdul Kalam Technical <l style="margin-left: 20px;">University</l></a>
+          <img src="image/arrow1.png" height="10px" width="10px;">&nbsp &nbsp<a href="https:aktu.ac.in/" target="blank">Dr. A P J Abdul Kalam Technical <l style="margin-left: 20px;">University</l></a>
 
         </div>
           <div class="m" style="float: right;">
@@ -355,16 +336,17 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
           </center>
 <div id="implink"></div>
           </div>
-          <img src="image/images (3).jpeg" height="300px" width="636px" style="margin-left: 6px;">  
+          <img src="image/images (3).jpeg" height="300px" width="706px" style="margin-left: 16px;margin-top: 5px;">  
           <br>
-          <h2><span style="color: #000000;">Introduction</span></h2>
+          <h2><span style="color: #000000;"> Introduction</span></h2>
           <hr>
-            <p><b style="font-family: verdana;">KAMLA NEHRU INSTITUTE OF TECHNOLOGY (KNIT) SULTANPUR</b>, was established by Govt. of Uttar Pradesh as a registered society in 1979 with a mission to advanced knowledge and educate students in Engineering & Technology and other areas of scholarship that will best serve the region and the nation. Initially institute was named as Kamla Nehru Institute of Science & Technology (Technological faculty) which was changed to KAMLA NEHRU INSTITUTE OF TECHNOLOGY, SULTANPUR in 1983. </p> 
+            <p><b style="font-family: verdana;"> KAMLA NEHRU INSTITUTE OF TECHNOLOGY (KNIT) SULTANPUR</b>, was established by Govt. of Uttar Pradesh as a registered society in 1979 with a mission to advanced knowledge and educate students in Engineering & Technology and other areas of scholarship that will best serve the region and the nation. Initially institute was named as Kamla Nehru Institute of Science & Technology (Technological faculty) 
+              which was changed to KAMLA NEHRU INSTITUTE OF TECHNOLOGY, SULTANPUR in 1983. <a href="abt.html" target="_blank">Read More >></a></p> 
             <br><br>
             <center>
-            <a href="https://upsee.nic.in/publicinfo/public/home.aspx" target="blank"><new>Admission Notice UPSEE-2020<img src="image/newicon.gif"></new></></a><br><br><br>
-            <a href="https://govexams.com/knit/Searchresult.aspx" target="blank"><new>View Result/Score Card<img src="image/newicon.gif"></new></a><br><br><br>
-            <a href="https://www.tvaran2k20.co.in" target="blank"><new>Tvaran 2020<img src="image/newicon.gif"></new></></a>
+            <a href="https:upsee.nic.in/publicinfo/public/home.aspx" target="blank"><new>Admission Notice UPSEE-2020<img src="image/newicon.gif"></new></></a><br><br><br>
+            <a href="https:govexams.com/knit/Searchresult.aspx" target="blank"><new>View Result/Score Card<img src="image/newicon.gif"></new></a><br><br><br>
+            <a href="https:www.tvaran2k20.co.in" target="blank"><new>Tvaran 2020<img src="image/newicon.gif"></new></></a>
           </center>
         </div>
 <div id="footer">
@@ -373,7 +355,7 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
         <div class="f1"><center><img src="image/contect.png" height="90px;" width="90px;" style="margin-top: 15PX;">
 <p style="margin-left: 10px;">DirectorProf.J.P.Pandey 9415041790 director@knit.ac.in
 Registrar Prof.B.P.Chaurasia 9415068565 bp_chaurasia@knit.ac.in</p><br><a href="contact.html" style="border: 0px;"><n1>View more>></n1></a></center></div>
-        <div class="f1"><center><img src="image/pta.jpg" height="100px;" width="100px;" style="margin-top: 10px;"><p style="margin-left: 10px;">Kamla Nehru Insitute of Techonology Sultanpur Utter pradesh INDIA (Affiliated to Dr A P J Abdul Kalam Technical Univercity)</p><br><a href="https://www.google.com/maps/dir//Kamla+Nehru+Institute+of+Technology,+Sultanpur+(U.P.),+Sultanpur+-+Kadipur+Rd,+Sultanpur,+Uttar+Pradesh+228118/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x399a7c86d691219f:0x99a3eb1e7c07f78f?sa=X&ved=2ahUKEwjW_8CUu73nAhVIU30KHY4_BF4Q48ADMAV6BAgHECg" style="border: 0px;margin-top: 15px; "><n1>View Location</n1></a></center></div></div>
+        <div class="f1"><center><img src="image/pta.jpg" height="100px;" width="100px;" style="margin-top: 10px;"><p style="margin-left: 10px;margin-bottom: 26px;">Kamla Nehru Insitute of Techonology Sultanpur Utter pradesh INDIA (Affiliated to Dr A P J Abdul Kalam Technical Univercity)</p><br><a href="https:www.google.com/maps/dirKamla+Nehru+Institute+of+Technology,+Sultanpur+(U.P.),+Sultanpur+-+Kadipur+Rd,+Sultanpur,+Uttar+Pradesh+228118/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x399a7c86d691219f:0x99a3eb1e7c07f78f?sa=X&ved=2ahUKEwjW_8CUu73nAhVIU30KHY4_BF4Q48ADMAV6BAgHECg" style="border: 0px;margin-top: 15px; "><n1>View Location</n1></a></center></div></div>
         <div id="flast"><center><d style="font-weight: lighter; font-size: 14px; margin-top: 20px;
 " >&copy Kamla Nehru Institute of Technology, Sultanpur | Disclaimer |Powered by: Adarsh Patel|
 </d></center></div>
