--- a/abt.html
+++ b/abt.html
@@ -97,7 +97,7 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
                   <span class="dot"></span> 
                   <span class="dot"></span> 
                 </div>
-                <script src="js/slider.js"></script>     
+                <script src="slider.js"></script>     
         <br>  
             <div id="slider">
     <p>KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR was initially established as the Faculty of Technology in the year 1976 by Kamla Nehru Memorial Trust. It was taken over by the Government. of Uttar Pradesh in 1979 with a view to developing a full-fledged Engineering Institute in the Eastern UP region better known as the Awadh region. Later, in the year 1983.<br>it was registered as a separate society and renamed as the Kamla Nehru Institute of Technology.
