--- a/gallery.html
+++ b/gallery.html
@@ -150,13 +150,50 @@ KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</h2></span>
       <div id="mark"><span style="font-size:15px; color:blue;">
 <marquee scrollamount="7"><b><img src="image/rose.png" height="20px" width="20pxs"> <i>WELCOME TO KAMLA NEHRU INSTITUTE OF TECHNOLOGY SULTANPUR INDIA</i><img src="image/rose.png" height="20px" width="20pxs"></b></marquee></span></div>
        <div id="middle">
-       <div class="m"><div class="m1"><a href="image/a1.jpg"><img onmouseover="bigImg(this)" onmouseout="normalImg(this)"alt="a1" src="image/a1.jpg" height="270px" width="275"></a></div><div class="m1"><a href="image/a2.jfif"><img src="image/a2.jfif" height="270px" width="275"></a></div><div class="m1"><a href="image/a6.jfif"><img src="image/a6.jfif" height="270px" width="275"></div></div>
-
-       <div class="m"><div class="m1"><img src="image/aa2.jfif" height="270px" width="275"></div><div class="m1"><img src="image/a9.jfif" height="270px" width="275"></div><div class="m1"><img src="image/images (2).jpeg" height="270px" width="275"></div></div>
-       
-       <div class="m"><div class="m1"><img src="image/a6.jfif" height="270px" width="275"></div><div class="m1"><img src="image/a7.jfif" height="270px" width="275"></div><div class="m1"><img src="image/a8.jfif" height="270px" width="275"></div></div>
-       
-       <div class="m"><div class="m1"><img src="image/IMG20190902083725.jpg" height="270px" width="275"></div><div class="m1"><img src="image/IMG20190824121503.jpg" height="270px" width="275"></div><div class="m1"><img src="image/aa1.jfif" height="270px" width="275"></div></div>
+       <div class="m">
+	       <div class="m1">
+		       <a href="image/a1.jpg"><img alt="a1" src="image/a1.jpg" height="270px" width="275"></a>
+	       </div>
+	       <div class="m1">
+		       <a href="image/a2.jfif"><img src="image/a2.jfif" height="270px" width="275"></a>
+	       </div>
+	       <div class="m1">
+		       <a href="image/a6.jfif"><img src="image/a6.jfif" height="270px" width="275"></a>
+	       </div>
+	</div>
+       <div class="m">
+	       <div class="m1">
+		       <a href="image/aa2.jfif" target="self"><img src="image/aa2.jfif" height="270px" width="275"></a>
+	       </div>
+	       <div class="m1">
+		       <a href="image/a9.jfif" target="self"><img src="image/a9.jfif" height="270px" width="275"></a>
+	       </div>
+	       <div class="m1">
+		       <a href="image/images (2).jpeg" target="self"><img src="image/images (2).jpeg" height="270px" width="275"></a>
+	       </div>
+	</div>
+       <div class="m">
+	       <div class="m1">
+		       <a href="image/a6.jfif" target="self"><img src="image/a6.jfif" height="270px" width="275"></a>
+	       </div>
+	       <div class="m1">
+		       <a href="image/a7.jfif" target="self"><img src="image/a7.jfif" height="270px" width="275"></a>
+	       </div>
+	       <div class="m1">
+		       <a href="image/a8.jfif" target="self"><img src="image/a8.jfif" height="270px" width="275"></a>
+	       </div>
+	 </div>
+       <div class="m">
+	       <div class="m1">
+		       <a href="image/IMG20190902083725.jpg" target="self"><img src="image/IMG20190902083725.jpg" height="270px" width="275"></a>
+	       </div>
+	       <div class="m1">
+		       <a href="image/IMG20190824121503.jpg" target="self"><img src="image/IMG20190824121503.jpg" height="270px" width="275"></a>
+	       </div>
+	       <div class="m1">
+		       <a href="image/a9.jfif" target="self"><img src="image/aa1.jfif" height="270px" width="275"></a>
+	       </div>
+	</div>
        <CENTER><img src="image/Gallery-PNG-HD.png" height="150px" width="400px"></CENTER>
         </div>
         <div id="flast"><center><d style="font-weight: lighter;	font-size: 14px; margin-top: 20px;
